<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_marginTop="45dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:layout_marginTop="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/grey_8_outline"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_showNameCode="false"
                    app:ccp_defaultNameCode="py"
                    app:ccp_textSize="12dp"/>

                <LinearLayout
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorTextGrey"/>

                <EditText
                    android:id="@+id/txt_login_phone"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    style="@style/txt_login" />

                <LinearLayout
                    android:id="@+id/llt_login_verify"
                    android:layout_width="55dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:background="@drawable/green_8_gradient"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/verify_button_title"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/grey_8_outline"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_marginStart="12dp"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_code_black"/>

                <LinearLayout
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorTextGrey"/>

                <EditText
                    android:id="@+id/txt_login_code"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:hint="@string/hint_verification_code"
                    style="@style/txt_login" />

                <TextView
                    android:id="@+id/lbl_login_counter"
                    android:layout_marginEnd="8dp"
                    style="@style/text.black.16"
                    android:text="60 s"/>
            </LinearLayout>

            <Button
                android:layout_marginTop="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/btn_title_login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:onClick="onClickLogin"
                android:background="@drawable/green_8_gradient"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="12dp">

                <TextView
                    style="@style/text.black.16"
                    android:text="@string/login_no_register" />

                <TextView
                    android:id="@+id/txt_goto_register"
                    android:layout_marginStart="8dp"
                    style="@style/text.blue.16"
                    android:text="@string/login_register"
                    android:onClick="goToRegister"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>